--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "Portfolio",
 	"main": "index.js",
 	"scripts": {
-		"sass": "node-sass -w scss/ -o css/ --recursive"
+		"sass": "sass scss/:css/ --watch"
 	},
 	"repository": {
 		"type": "git",
@@ -17,6 +17,6 @@
 	},
 	"homepage": "https://github.com/Suawek013/suawek013.github.io#readme",
 	"dependencies": {
-		"node-sass": "^6.0.0"
+		"sass": "^1.34.1"
 	}
 }
